--- a/style.css
+++ b/style.css
@@ -301,8 +301,6 @@ tr:nth-child(even) {
 }
 
 
-
-
 .modal-content label {
   display: block;
   margin: 12px 0 12px;
@@ -342,6 +340,19 @@ tr:nth-child(even) {
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+
+.modal-content textarea {
+  width: 100%;
+  padding: 8px;
+  margin-top: 4px;
+  font-size: 16px;
+  font-family: inherit;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical; /* hoặc none nếu không muốn cho kéo */
+}
+
 
 .modal-actions {
   display: flex;
