--- a/style.css
+++ b/style.css
@@ -726,7 +726,7 @@ tr:nth-child(even) {
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  gap: 0;
+  gap: 0px;
   padding: 2px;
   background-color: #dadadb;
   border-radius: 9px 9px 0 0;
@@ -738,42 +738,60 @@ tr:nth-child(even) {
 }
 
 .table-tab-label {
-  height: 28px;
+  height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.75rem;
-  opacity: 0.6;
+  font-size: 1rem;
+  opacity: 0.4;
   cursor: pointer;
   position: relative;
   z-index: 2;
   flex: 1 1 33.33%; /* Mỗi tab chiếm 1/3 chiều rộng */
 }
 
+/* 🔥 Khi tab được chọn, label tương ứng sáng lên */
+[id^="table-tab-1"]:checked ~ label[for^="table-tab-1"],
+[id^="table-tab-2"]:checked ~ label[for^="table-tab-2"],
+[id^="table-tab-3"]:checked ~ label[for^="table-tab-3"] {
+  opacity: 1;
+  font-weight: bold;
+}
+
+
+.table-tab-label {
+  background: rgba(0, 255, 0, 0.1); /* test căn giữa */
+}
+
+
+
 .table-tab-indicator {
   position: absolute;
   top: 2px;
-  left: 0%;
-  width: calc(100% / 3); /* Indicator rộng bằng 1/3 container */
+  left: 20px; /* cách trái 2px */
+  width: calc((100% / 3) - 6px); /* trừ 4px để cách trái + phải mỗi bên 2px */
   height: 28px;
   background: #fff;
   border-radius: 7px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.12), 0px 3px 1px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.12),
+              0px 3px 1px rgba(0, 0, 0, 0.04);
   transition: all 0.2s ease-out;
   z-index: 1;
   border: 0.5px solid rgba(0, 0, 0, 0.04);
 }
 
+
 /* Dịch chuyển indicator dựa trên tab được chọn */
-[id^="table-tab-1"]:checked ~ .table-tab-label[for^="table-tab-1"] ~ .table-tab-indicator {
-  left: 0%;
+[id^="table-tab-1"]:checked ~ label[for^="table-tab-1"] ~ .table-tab-indicator {
+  left: 2px;
 }
-[id^="table-tab-2"]:checked ~ .table-tab-label[for^="table-tab-2"] ~ .table-tab-indicator {
-  left: 33.3333%;
+[id^="table-tab-2"]:checked ~ label[for^="table-tab-2"] ~ .table-tab-indicator {
+  left: calc((100% / 3) + 2px);
 }
-[id^="table-tab-3"]:checked ~ .table-tab-label[for^="table-tab-3"] ~ .table-tab-indicator {
-  left: 66.6666%;
+[id^="table-tab-3"]:checked ~ label[for^="table-tab-3"] ~ .table-tab-indicator {
+  left: calc((100% / 3 * 2) + 2px);
 }
+
 
 /* Hiển thị nội dung đúng tab */
 .table-tab-content-wrapper {
