--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   padding: 10px;
   /* background: #7dd3fc; Xanh */
 /*   background: #C4D9FF; Tím */
-  background: #A3D8FF;
+  background: #B0EBB4;
 }
 
 /* Nếu có container bao quanh, đảm bảo nó cũng full width */
