--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
   /* background: linear-gradient(to bottom, #AAEBF7 0%, white 21.3%, white 80.7%, #AAEBF7 100%);   */
   padding: 10px;
   /* background: #7dd3fc; Xanh */
-/*   background: #C4D9FF; Tím */
-  background: #B0EBB4;
+  background: #C4D9FF;
 }
 
 /* Nếu có container bao quanh, đảm bảo nó cũng full width */
