--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   /* background: linear-gradient(to bottom, #AAEBF7 0%, white 21.3%, white 80.7%, #AAEBF7 100%);   */
   padding: 10px;
   /* background: #7dd3fc; Xanh */
-  background: #C4D9FF;
+  background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 }
 
 /* Nếu có container bao quanh, đảm bảo nó cũng full width */
