--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   /* background: linear-gradient(to bottom, #AAEBF7 0%, white 21.3%, white 80.7%, #AAEBF7 100%);   */
   padding: 10px;
   /* background: #7dd3fc; Xanh */
-background: conic-gradient(from 45deg, rgba(119, 171, 220, 1.000) 0.000deg, rgba(119, 171, 220, 1.000) 27.692deg, rgba(99, 187, 220, 1.000) 27.692deg, rgba(99, 187, 220, 1.000) 55.385deg, rgba(88, 204, 210, 1.000) 55.385deg, rgba(88, 204, 210, 1.000) 83.077deg, rgba(89, 219, 193, 1.000) 83.077deg, rgba(89, 219, 193, 1.000) 110.769deg, rgba(101, 228, 172, 1.000) 110.769deg, rgba(101, 228, 172, 1.000) 138.462deg, rgba(122, 230, 149, 1.000) 138.462deg, rgba(122, 230, 149, 1.000) 166.154deg, rgba(149, 224, 129, 1.000) 166.154deg, rgba(149, 224, 129, 1.000) 193.846deg, rgba(177, 212, 116, 1.000) 193.846deg, rgba(177, 212, 116, 1.000) 221.538deg, rgba(202, 195, 111, 1.000) 221.538deg, rgba(202, 195, 111, 1.000) 249.231deg, rgba(219, 178, 115, 1.000) 249.231deg, rgba(219, 178, 115, 1.000) 276.923deg, rgba(225, 165, 129, 1.000) 276.923deg, rgba(225, 165, 129, 1.000) 304.615deg, rgba(220, 156, 148, 1.000) 304.615deg, rgba(220, 156, 148, 1.000) 332.308deg, rgba(205, 156, 171, 1.000) 332.308deg 360.000deg);
+background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
 }
 
 /* Nếu có container bao quanh, đảm bảo nó cũng full width */
