--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   /* background: linear-gradient(to bottom, #AAEBF7 0%, white 21.3%, white 80.7%, #AAEBF7 100%);   */
   padding: 10px;
-  /* background: #7dd3fc; Xanh */
-background: linear-gradient(45deg, rgba(142, 197, 252, 1.000) 0.000%, rgba(141, 211, 255, 1.000) 25.000%, rgba(161, 216, 255, 1.000) 50.000%, rgba(193, 210, 255, 1.000) 75.000%, rgba(224, 195, 255, 1.000) 100.000%);
+  /* background: #7dd3fc; */
+  /* background: #CAE8BD; */
+  background: #C4D9FF;
 }
 
 /* Nếu có container bao quanh, đảm bảo nó cũng full width */
